<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:padding="10dp"
        android:id="@+id/pokemon_card_details_capture"
        android:layout_width="360dp"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/captured_pokemon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textAlignment="viewStart"
            android:textColor="@color/dark_gray"
            android:paddingBottom="5dp"
            android:textStyle="bold"
            android:layout_marginVertical="16dp"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:hint="@string/nickname"
            android:singleLine="false"
            android:padding="10dp"
            android:background="@drawable/textbox"
            android:inputType="text"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:layout_marginVertical="10dp"
            android:hint="@string/captured_date"
            android:inputType="date"
            android:padding="10dp"
            android:singleLine="false"
            android:background="@drawable/textbox"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/level"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:hint="@string/captured_level"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="false"
            android:background="@drawable/textbox"
            android:importantForAutofill="no" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/capture_dialog_btn"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            app:backgroundTint="@color/light_gray"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_marginVertical="10dp"
            android:enabled="false"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            app:cornerRadius="20dp"
            android:text="@string/capture" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>