<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_alignParentTop="false"
    android:layout_alignParentBottom="false"
    android:layout_centerInParent="false"
    android:layout_centerHorizontal="false"
    android:layout_centerVertical="false">

    <LinearLayout
        android:id="@+id/pokemon_card_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/poke_image_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        android:padding="10dp" />

    <TextView
        android:id="@+id/poke_name_details"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="0dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:paddingTop="5dp"
        android:textSize="30sp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:clipToOutline="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:layout_gravity="start"
                    android:textAlignment="viewStart"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:paddingTop="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/about"
                    android:textSize="25sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/type_details"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:layout_gravity="start"
                    android:textAlignment="viewStart"
                    android:textColor="@color/light_gray"
                    android:padding="10dp"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/weight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:layout_gravity="start"
                    android:textAlignment="viewStart"
                    android:paddingBottom="10dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/light_gray"
                    android:textSize="15sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/height"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:layout_gravity="start"
                    android:textAlignment="viewStart"
                    android:paddingStart="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/light_gray"
                    android:textSize="15sp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_gravity="start"
            android:textAlignment="viewStart"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:padding="10dp"
            android:text="@string/base_stats"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/HP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_gravity="start"
            android:textAlignment="viewStart"
            android:textColor="@color/light_gray"
            android:paddingStart="10dp"
            android:paddingBottom="4dp"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/atk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_gravity="start"
            android:textAlignment="viewStart"
            android:textColor="@color/light_gray"
            android:paddingStart="10dp"
            android:paddingBottom="4dp"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/def"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_gravity="start"
            android:textAlignment="viewStart"
            android:textColor="@color/light_gray"
            android:paddingStart="10dp"
            android:paddingBottom="4dp"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/spc_atk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_gravity="start"
            android:textAlignment="viewStart"
            android:textColor="@color/light_gray"
            android:paddingStart="10dp"
            android:paddingBottom="4dp"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/spc_def"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_gravity="start"
            android:textAlignment="viewStart"
            android:textColor="@color/light_gray"
            android:paddingStart="10dp"
            android:paddingBottom="4dp"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/spd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_gravity="start"
            android:textAlignment="viewStart"
            android:textColor="@color/light_gray"
            android:paddingStart="10dp"
            android:paddingBottom="2dp"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/capture"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            app:backgroundTint="@color/capture_red"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_width="333dp"
            android:paddingVertical="12dp"
            app:cornerRadius="20dp"
            android:textSize="20sp"
            android:text="@string/capture" />

    </LinearLayout>
</layout>